<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_mark_read"
            android:title="@string/action_mark_read"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_mark_unread"
            android:title="@string/action_mark_unread"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_download_offline"
            android:title="@string/action_download_offline"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_delete_offline"
            android:title="@string/action_delete_offline"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_export_read"
            android:title="@string/action_export_read"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_select_all"
            android:title="@string/action_select_all"
            app:showAsAction="never"/>
</menu>
